<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="weatherViewBinding"
            type="com.app.weatherreport.weatherModelData.WeatherModelData" />
    </data>
    <LinearLayout android:weightSum="2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.libraries.maps.MapView
                android:id="@+id/mvPlaces"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>


        <ScrollView
            android:layout_weight="1"
            android:background="#eeee"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:visibility="gone"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    tools:text="Status"
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_gravity="start"
                    android:id="@+id/llForecastDetail"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/area_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/tvCountryName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/description"
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/forecast_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/description"
                        android:id="@+id/tvWeatherDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/temperature_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/min_temperature"
                        android:id="@+id/tvTempLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/max_temperature"
                        android:id="@+id/tvTempMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/max_temperature"
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/wind_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/wind_speed"
                        android:id="@+id/tvSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/add_to_bookmark"
                        android:layout_gravity="center_horizontal"
                        android:background="#FFFFFF"
                        android:id="@+id/btAddBookmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>